# Algoritmit-harjoitusty-

./: README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
dokumentaatio/: Käyttöohje.md  käyttöohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
dokumentaatio/viikko_raportit/: viikko1.md
dokumentaatio/viikkoraportit/: viikko1.md  viikko2.md  viikko3.md  viikko4.md  viikko5.md  viikko6.md  viikko7.md
src/: index.py
src/UI/: ui.py
src/ai/: opponent.py
src/board/: board.py
src/logic/: opponent.py
src/services/: testi.py
src/tests/: board_test.py  opponent_test.py  testi_test.py  ui_test.py
